fix variable names